--- a/css/foopicker.css
+++ b/css/foopicker.css
@@ -68,6 +68,10 @@
   outline: 0;
   position: absolute;
   top: 31px;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
   width: 14px;
 }
 
