--- a/scss/foopicker.scss
+++ b/scss/foopicker.scss
@@ -4,7 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600);
 
 $white: #fff;
-$base-blue: #3498db !default;
+$base-blue: #1fbad6 !default;
 $base-black: #666 !default;
 $base-border: #ccc;
 $picker-shadhow: #bbb;
