--- a/scss/foopicker.scss
+++ b/scss/foopicker.scss
@@ -52,7 +52,8 @@ $base-width: 245px;
     }
 
     @at-root #{&}--today {
-      background: $today-color;
+      background: $base-blue;
+      color: $white;
     }
 
     @at-root #{&}--selected {
